php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37313 sigemptyset() used without including <signal.h>
Submitted: 2006-05-04 18:28 UTC Modified: 2006-05-05 07:08 UTC
From: jdolecek at NetBSD dot org Assigned: dmitry (profile)
Status: Closed Package: Compile Warning
PHP Version: 5.1.3 OS: NetBSD
Private report: No CVE-ID: None
 [2006-05-04 18:28 UTC] jdolecek at NetBSD dot org
Description:
------------
Compiling FastCGI PHP emits a warning about sigemptyset() used without correct header #include in sapi/cgi/fastcgi.c.

Patch:
--- sapi/cgi/fastcgi.c.orig
+++ sapi/cgi/fastcgi.c
@@ -69,7 +69,7 @@
 # include <netinet/in.h>
 # include <arpa/inet.h>
 # include <netdb.h>
-# include <sys/signal.h>
+# include <signal.h>
 
 #ifndef INADDR_NONE
 #define INADDR_NONE ((unsigned long) -1)


Reproduce code:
---------------
./configure --enable-fastcgi, make and wait

Expected result:
----------------
No warning

Actual result:
--------------
sapi/cgi/fastcgi.o(.text+0x9c): In function `fcgi_init':
: warning: warning: reference to compatibility sigemptyset(); include <signal.h> for correct reference


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-05-05 07:08 UTC] dmitry@php.net
Thnank you for catching this bug.
Your patch is committed into CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC