Fixed bug #37313 (sigemptyset() used without including <signal.h>). (jdolecek)